# real_mednlp-eval

./: .gitignore  MedTxt-CR-JA-test.xml  MedTxt-RR-JA-test.xml  MedTxt.dtd  README.md  evaluate_ade.py  evaluate_ade_batch.py  evaluate_ci.py  evaluate_ner.py  finer_ner_eval.py  pyproject.toml  validate_format.py
weights/: MedTxt-CR-EN-training-entity_stat.csv  MedTxt-CR-JA-training-entity_stat.csv  MedTxt-RR-EN-training-entity_stat.csv  MedTxt-RR-JA-training-entity_stat.csv  guideline-EN-entity_stat.csv  guideline-JA-entity_stat.csv
