[tool.poetry]
name = "real_mednlp-cr-eval"
version = "0.1.0"
description = "To evaluate Real-MedNLP CR track submissions"
authors = ["Shuntaro Yada <contact@shuntaroy.com>", "Yuta Nakamura <yutanakamura.tky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.1"
seqeval = "^1.2.2"
pandas = "^1.3.5"
scikit-learn = ">=1.0.0"
tqdm = "^4.65.0"
fire = "^0.5.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
